# Tech-Profiler

./: .gitignore  README.md  analyze_output.py  main.py  profiler.py  pyproject.toml
.github/workflows/: deploy.yml
thinking_process/: components.json  package-lock.json  package.json  svelte.config.js
thinking_process/src/routes/: +page.svelte
